@@ -20,6 +20,8 @@ KERNEL_MAJOR="$(uname -r | cut -d . -f 1,2)"
 KERNEL_VERSION="$(uname -r | cut -d - -f 1)"
 KERNEL_ABI="$(uname -r | cut -d - -f 1,2)"
 MACHINE="$(uname -m)"
+CPUINFO=/proc/cpuinfo
+SPEAKUP=/proc/speakup
 
 # Avoid debconf sending email during the base install process.
 DEBCONF_ADMIN_EMAIL=""
