@@ -43,6 +43,9 @@ Shell variables all functions may expect:
     The architecture (as returned by udpkg --print-architecture).
   SUBARCH
     The subarchitecture (as returned by archdetect).
+  CPUINFO
+    The location of /proc/cpuinfo, parameterised for the benefit of the test
+    suite.
   KERNEL_MAJOR
     The major version of the running kernel, e.g. 2.4 or 2.6.
   KERNEL_VERSION
